zno-macro-draft/tests/zno/ui/err/017-name-is-byte-str.stderr
error: `name` value should be a string
 --> tests/zno/ui/err/017-name-is-byte-str.rs:3:9
  |
3 | #[zno(name = b"name")]
  |         ^^^^
