zno-macro-draft/tests/zno/ui/err/017-name-is-byte-str.rs
use zno::zno;

#[zno(name = b"name")]
fn f() {}

fn main() {}
